--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <title>Norrflod</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  
+<body id="bodystart">
+  <header>
+    <img src="" alt="Bild med text Lucas Norrflod">
+  </header>
+  <section id="mainsec">
+    <a href="erfarenhet.html">
+      <div class="linkdiv">
+        <h2>Erfarenhet</h2>
+      </div>
+    </a>
+    <a href="projekt.html">
+      <div class="linkdiv">
+        <h2>Projekt</h2>
+      </div>
+    </a>
+    <a href="om_mig.html">
+      <div class="linkdiv">
+        <h2>Om mig</h2>
+      </div>
+    </a>
+  </section>
+  <footer>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
+  </footer>
 </body>
 </html>
