--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>Norrflod</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=close"/>
 </head>
 <body id="bodystart">
   <header>
+    <div class="menu-button">
+      <i class="material-symbols-outlined">menu</i>
+    </div>
     <img src="" alt="Bild med text Lucas Norrflod">
   </header>
   <section id="mainsec">
@@ -32,5 +38,17 @@
     <a href=""></a>
     <a href=""></a>
   </footer>
+  <nav class="menu">
+    <div class="menu-button">
+      <i class="material-symbols-outlined" id="vitmenu">close</i>
+    </div>
+    <ul>
+        <li><a href="erfarenhet.html">Item 1</a></li>
+        <li><a href="projekt.html">Item 2</a></li>
+        <li><a href="om_mig.html">Item 3</a></li>
+    </ul>
+</nav>
+<div class="fade-layer"></div>
+<script src="js/main.js"></script>
 </body>
 </html>
