--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <title>Norrflod</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=close"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=close"/>
 </head>
 <body id="bodystart">
   <header>
     <div class="menu-button">
       <i class="material-symbols-outlined">menu</i>
     </div>
-    <img src="" alt="Bild med text Lucas Norrflod">
+    <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="Bild med text Lucas Norrflod">
   </header>
   <section id="mainsec">
     <a href="erfarenhet.html">
