--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=close"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body id="bodystart">
   <header>
@@ -16,6 +17,18 @@
     </div>
     <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="Bild med text Lucas Norrflod">
   </header>
+    <nav class="menu">
+      <div class="close-button">
+        <i class="material-symbols-outlined">close</i>
+      </div>
+      <ul>
+        <li><a href="index.html">Item 0</a></li>
+        <li><a href="erfarenhet.html">Item 1</a></li>
+        <li><a href="projekt.html">Item 2</a></li>
+        <li><a href="om_mig.html">Item 3</a></li>
+      </ul>
+    </nav>
+  <div class="fade-layer"></div>
   <section id="mainsec">
     <a href="erfarenhet.html">
       <div class="linkdiv">
@@ -34,21 +47,10 @@
     </a>
   </section>
   <footer>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
+    <a href="https://www.linkedin.com/in/lucas-norrflod-8b50b531a/" id="linklink">
+      <i class="fa fa-linkedin-square biggericon" id="linkedin"></i>
+    </a>
   </footer>
-  <nav class="menu">
-    <div class="menu-button">
-      <i class="material-symbols-outlined" id="vitmenu">close</i>
-    </div>
-    <ul>
-        <li><a href="erfarenhet.html">Item 1</a></li>
-        <li><a href="projekt.html">Item 2</a></li>
-        <li><a href="om_mig.html">Item 3</a></li>
-    </ul>
-</nav>
-<div class="fade-layer"></div>
 <script src="js/main.js"></script>
 </body>
 </html>
