--- a/om_mig.html
+++ b/om_mig.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Norrflod om mig</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
 </head>
-<body>
-    
+<body id="ommig">
+    <header>
+        <div class="menu-button">
+          <i class="material-symbols-outlined">menu</i>
+        </div>
+      </header>
+      <nav class="menu">
+        <div class="close-button">
+          <i class="material-symbols-outlined">close</i>
+        </div>
+        <ul>
+            <li><a href="index.html">Item 0</a></li>
+            <li><a href="erfarenhet.html">Item 1</a></li>
+            <li><a href="projekt.html">Item 2</a></li>
+            <li><a href="om_mig.html">Item 3</a></li>
+        </ul>
+      </nav>
+      <div class="fade-layer"></div>
+    <script src="js/main.js"></script>
 </body>
 </html>
