--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <div class="close-button">
         <i class="material-symbols-outlined">close</i>
       </div>
-      <ul>
-        <li><a href="index.html">Item 0</a></li>
-        <li><a href="erfarenhet.html">Item 1</a></li>
-        <li><a href="projekt.html">Item 2</a></li>
-        <li><a href="om_mig.html">Item 3</a></li>
-      </ul>
+      <div id="">
+        <a href="index.html"><div class="menu-links">Item 0</div></a>
+        <a href="erfarenhet.html"><div class="menu-links">Item 1</div></a>
+        <a href="projekt.html"><div class="menu-links">Item 2</div></a>
+        <a href="om_mig.html"><div class="menu-links">Item 3</div></a>
+      </div>
     </nav>
   <div class="fade-layer"></div>
   <section id="mainsec">
@@ -53,4 +53,4 @@
   </footer>
 <script src="js/main.js"></script>
 </body>
-</html> <!-- hej-->
+</html>
