--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <div class="close-button">
         <i class="material-symbols-outlined">close</i>
       </div>
-      <div id="">
-        <a href="index.html"><div class="menu-links">Item 0</div></a>
-        <a href="erfarenhet.html"><div class="menu-links">Item 1</div></a>
-        <a href="projekt.html"><div class="menu-links">Item 2</div></a>
-        <a href="om_mig.html"><div class="menu-links">Item 3</div></a>
+      <div id="linkWrapper">
+        <a href="index.html"><div class="menu-links">Hem</div></a>
+        <a href="erfarenhet.html"><div class="menu-links">Erfarenheter</div></a>
+        <a href="projekt.html"><div class="menu-links">Projekt</div></a>
+        <a href="om_mig.html"><div class="menu-links">Om mig</div></a>
       </div>
     </nav>
   <div class="fade-layer"></div>
