--- a/om_mig.html
+++ b/om_mig.html
@@ -10,23 +10,24 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
 </head>
 <body id="ommig">
-    <header>
-        <div class="menu-button">
-          <i class="material-symbols-outlined">menu</i>
-        </div>
-      </header>
-      <nav class="menu">
-        <div class="close-button">
-          <i class="material-symbols-outlined">close</i>
-        </div>
-        <ul>
-            <li><a href="index.html">Item 0</a></li>
-            <li><a href="erfarenhet.html">Item 1</a></li>
-            <li><a href="projekt.html">Item 2</a></li>
-            <li><a href="om_mig.html">Item 3</a></li>
-        </ul>
-      </nav>
-      <div class="fade-layer"></div>
+  <header>
+    <div class="menu-button">
+      <i class="material-symbols-outlined">menu</i>
+    </div>
+    <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="Bild med text Lucas Norrflod">
+  </header>
+    <nav class="menu">
+      <div class="close-button">
+        <i class="material-symbols-outlined">close</i>
+      </div>
+      <div id="linkWrapper">
+        <a href="index.html"><div class="menu-links">Hem</div></a>
+        <a href="erfarenhet.html"><div class="menu-links">Erfarenheter</div></a>
+        <a href="projekt.html"><div class="menu-links">Projekt</div></a>
+        <a href="om_mig.html"><div class="menu-links">Om mig</div></a>
+      </div>
+    </nav>
+  <div class="fade-layer"></div>
     <script src="js/main.js"></script>
 </body>
 </html>
