Färdig med hårdjobbet på erfarenheter

--- a/erfarenhet.html
+++ b/erfarenhet.html
@@ -30,7 +30,7 @@
   <div class="fade-layer"></div>
   <main id="er_main">
     <section class="er_sec">
-      <h2>Jobb</h2>
+      <h2 class="er_h2">Jobb</h2>
       <ul>
         <li>Jobb</li>
         <li>Jobb</li>
@@ -38,15 +38,15 @@
       </ul>
     </section>
     <section class="er_sec">
-      <h2>Utbildning</h2>
+      <h2 class="er_h2">Utbildning</h2>
       <ul>
         <li>Utbildning</li>
         <li>Utbildning</li>
         <li>Utbildning</li>
       </ul>
     </section>
-    <section>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis inventore repellendus ea, nobis asperiores quos sunt quae quis voluptas. Quas?
+    <section id="er_textsec">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, voluptatibus nulla minus vitae recusandae blanditiis quidem optio cupiditate laboriosam in animi quibusdam dolorum vero amet repellat tenetur, ullam iure itaque quae ipsam qui saepe sapiente, ad veniam? Laborum ex obcaecati a, et doloremque veritatis dolorem saepe in. Vero officia minima laborum quibusdam, provident est iusto explicabo veniam culpa. Doloribus nostrum explicabo voluptates quam velit, ipsum illum quibusdam exercitationem voluptatem laboriosam dolorum voluptatibus voluptas provident non voluptate laborum! Nobis fugit vel cum a iusto, laboriosam eius voluptatibus doloribus obcaecati autem, quibusdam explicabo accusantium. Et cupiditate odit neque voluptatum. Minima, vel ut provident iure, veritatis neque odio assumenda repellat voluptates incidunt at, temporibus nam sequi explicabo. Ab iste eos veniam nam vel neque, quisquam, ipsam iusto sit culpa illo quibusdam eius id blanditiis! Vitae, mollitia atque veritatis est non voluptatibus, facilis quia asperiores, excepturi assumenda repudiandae sit dicta nihil eveniet deserunt qui consequuntur perferendis nemo modi. Incidunt voluptate commodi molestias fugit assumenda. Nostrum iste in facilis dolor consequuntur ex accusantium asperiores, quasi eaque corporis voluptas assumenda incidunt sequi aut maxime ducimus ratione quas? Hic alias perferendis officia eligendi corrupti inventore voluptas consequuntur, esse ipsum, quo atque iure nihil aperiam totam, ex vero!
     </section>
   </main>
   <footer></footer>
