--- a/index.html
+++ b/index.html
@@ -22,34 +22,35 @@
         <i class="material-symbols-outlined">close</i>
       </div>
       <div id="linkWrapper">
-        <a href="index.html"><div class="menu-links">Hem</div></a>
-        <a href="erfarenhet.html"><div class="menu-links">Erfarenheter</div></a>
-        <a href="projekt.html"><div class="menu-links">Projekt</div></a>
-        <a href="om_mig.html"><div class="menu-links">Om mig</div></a>
+        <a href="index.html"><div class="menu-links link_hover">Hem</div></a>
+        <a href="erfarenhet.html"><div class="menu-links link_hover">Erfarenheter</div></a>
+        <a href="projekt.html"><div class="menu-links link_hover">Projekt</div></a>
+        <a href="om_mig.html"><div class="menu-links link_hover">Om mig</div></a>
       </div>
     </nav>
   <div class="fade-layer"></div>
   <section id="mainsec">
     <a href="erfarenhet.html">
-      <div class="linkdiv">
+      <div class="linkdiv link_hover">
         <h2>Erfarenhet</h2>
       </div>
     </a>
     <a href="projekt.html">
-      <div class="linkdiv">
+      <div class="linkdiv link_hover">
         <h2>Projekt</h2>
       </div>
     </a>
     <a href="om_mig.html">
-      <div class="linkdiv">
+      <div class="linkdiv link_hover">
         <h2>Om mig</h2>
       </div>
     </a>
   </section>
   <footer>
-    <a href="https://www.linkedin.com/in/lucas-norrflod-8b50b531a/" id="linklink">
+    <a href="https://www.linkedin.com/in/lucas-norrflod-8b50b531a/">
       <i class="fa fa-linkedin-square biggericon" id="linkedin"></i>
     </a>
+    <a href="pdf/Cv-2025.pdf" download="lucas_norrflod_cv"><div class="link_hover" id="download_container">Hämta CV</div></a>
   </footer>
 <script src="js/main.js"></script>
 </body>
