--- a/om_mig.html
+++ b/om_mig.html
@@ -16,17 +16,29 @@
     </div>
     <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="Bild med text Lucas Norrflod">
   </header>
-    <nav class="menu">
-      <div class="close-button">
-        <i class="material-symbols-outlined">close</i>
-      </div>
-      <div id="linkWrapper">
-        <a href="index.html"><div class="menu-links">Hem</div></a>
-        <a href="erfarenhet.html"><div class="menu-links">Erfarenheter</div></a>
-        <a href="projekt.html"><div class="menu-links">Projekt</div></a>
-        <a href="om_mig.html"><div class="menu-links">Om mig</div></a>
-      </div>
-    </nav>
+  <nav class="menu">
+    <div class="close-button">
+      <i class="material-symbols-outlined">close</i>
+    </div>
+    <div id="linkWrapper">
+      <a href="index.html"><div class="menu-links">Hem</div></a>
+      <a href="erfarenhet.html"><div class="menu-links">Erfarenheter</div></a>
+      <a href="projekt.html"><div class="menu-links">Projekt</div></a>
+      <a href="om_mig.html"><div class="menu-links">Om mig</div></a>
+    </div>
+  </nav>
+  <img src="img/image0.jpeg" alt="Ansiktsbild" id="ansiktsimg" class="hor_center">
+  <section class="ul_div hor_center">
+    <h2 class="ul_h2">Kort om mig</h2>
+    <ul>
+      <li>Intresserad av programmering och matte</li>
+      <li>Gillar träning</li>
+      <li>MBTI: INTJ-A</li>
+    </ul>
+  </section>
+  <main class="textsec">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae sunt enim incidunt rerum consequatur similique, a repellendus aut repudiandae quas consectetur sint ratione eligendi sapiente, doloribus quos maxime laborum? A optio placeat consequatur maiores, quis impedit! Quo dolorum incidunt enim commodi, dolor reprehenderit. Dolore, consectetur explicabo nemo eligendi laudantium eveniet ab repellat alias nam! Modi, illum harum eum possimus autem dolore, praesentium architecto quae cupiditate quibusdam sint tempore unde nisi, nihil repellendus consectetur. Excepturi adipisci aspernatur nihil, dolores laudantium amet quisquam quo, ullam similique expedita deserunt perspiciatis atque accusantium distinctio molestias ea dignissimos unde voluptate nulla tenetur quam dolore, nostrum molestiae? Praesentium cumque ex eius eligendi expedita quaerat sunt odit. Neque commodi tenetur atque voluptate ratione? Assumenda qui natus optio eligendi, voluptatem quam velit temporibus alias culpa nostrum reprehenderit quidem explicabo odit quibusdam ea amet vero. Autem quia fugit molestias blanditiis ab deserunt expedita in est voluptatum ex provident quibusdam magnam culpa iusto error eius sunt, libero reiciendis aut, earum magni! Distinctio beatae exercitationem quis ratione ab placeat eos consequuntur! Porro repudiandae, nostrum impedit vitae dolorum doloribus cum magnam facilis architecto adipisci debitis totam sequi est reprehenderit aut natus obcaecati in laboriosam! Nisi consectetur doloremque ratione maiores iusto, eligendi illo.
+  </main>
   <div class="fade-layer"></div>
     <script src="js/main.js"></script>
 </body>
