--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body id="bodystart">
+<body id="index">
   <header>
     <div class="menu-button">
       <i class="material-symbols-outlined">menu</i>
     </div>
-    <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="Bild med text Lucas Norrflod">
+    <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="Bild på vattenfall">
   </header>
-    <nav class="menu">
+    <nav class="menu" aria-label="primary">
       <div class="close-button">
         <i class="material-symbols-outlined">close</i>
       </div>
@@ -29,8 +29,8 @@
       </div>
     </nav>
   <div class="fade-layer"></div>
-  <section id="mainsec">
-    <a href="erfarenhet.html">
+  <nav id="mainnav">
+    <a href="erfarenhet.html" aria-label="secondary">
       <div class="linkdiv link_hover">
         <h2>Erfarenhet</h2>
       </div>
@@ -45,7 +45,7 @@
         <h2>Om mig</h2>
       </div>
     </a>
-  </section>
+  </nav>
   <footer>
     <a href="https://www.linkedin.com/in/lucas-norrflod-8b50b531a/">
       <i class="fa fa-linkedin-square biggericon" id="linkedin"></i>
