--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <div class="menu-button">
       <i class="material-symbols-outlined">menu</i>
     </div>
-    <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="Bild på vattenfall">
+    <picture>
+      <source media="(min-width:501px)" srcset="img/desktop-cover-img-river.jpg" alt="Bild på vattenfall">
+      <img src="img/phone-cover-img-river.jpg" alt="Bild på vattenfall">
+    </picture>
   </header>
     <nav class="menu" aria-label="primary">
       <div class="close-button">
