--- a/om_mig.html
+++ b/om_mig.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="sv">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Norrflod om mig</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <title>Norrflod</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
-</head>
+    <link rel="stylesheet" href="">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  </head>
 <body id="ommig">
-  <header>
+  <header id="om-mig-hd">
     <div class="menu-button">
       <i class="material-symbols-outlined">menu</i>
     </div>
     <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="Bild på vattenfall">
   </header>
-  <nav class="menu" aria-label="primary">
-    <div class="close-button">
-      <i class="material-symbols-outlined">close</i>
-    </div>
-    <div id="linkWrapper">
-      <a href="index.html"><div class="menu-links">Hem</div></a>
-      <a href="erfarenhet.html"><div class="menu-links">Erfarenheter</div></a>
-      <a href="projekt.html"><div class="menu-links">Projekt</div></a>
-      <a href="om_mig.html"><div class="menu-links">Om mig</div></a>
-    </div>
-  </nav>
-  <img src="img/image0.jpeg" alt="Ansiktsbild" id="ansiktsimg" class="hor_center">
-  <section class="ul_div hor_center">
+    <nav class="menu" aria-label="primary">
+      <div class="close-button">
+        <i class="material-symbols-outlined">close</i>
+      </div>
+      <div id="link-wrapper">
+        <a href="index.html"><div class="menu-links link-hover">Hem</div></a>
+        <a href="erfarenhet.html"><div class="menu-links link-hover">Erfarenheter</div></a>
+        <a href="projekt.html"><div class="menu-links link-hover">Projekt</div></a>
+        <a href="om_mig.html"><div class="menu-links" id="current-link">Om mig</div></a>
+      </div>
+    </nav>
+  <div class="fade-layer"></div>
+  <img src="img/image0.jpeg" alt="Ansiktsbild" id="ansiktsimg" class="self-center">
+  <section class="ul_div self-center" id="sc1">
     <h2 class="ul_h2">Kort om mig</h2>
     <ul>
       <li>Intresserad av programmering och matte</li>
@@ -36,10 +41,16 @@
       <li>MBTI: INTJ-A</li>
     </ul>
   </section>
-  <main class="text_sec">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae sunt enim incidunt rerum consequatur similique, a repellendus aut repudiandae quas consectetur sint ratione eligendi sapiente, doloribus quos maxime laborum? A optio placeat consequatur maiores, quis impedit! Quo dolorum incidunt enim commodi, dolor reprehenderit. Dolore, consectetur explicabo nemo eligendi laudantium eveniet ab repellat alias nam! Modi, illum harum eum possimus autem dolore, praesentium architecto quae cupiditate quibusdam sint tempore unde nisi, nihil repellendus consectetur. Excepturi adipisci aspernatur nihil, dolores laudantium amet quisquam quo, ullam similique expedita deserunt perspiciatis atque accusantium distinctio molestias ea dignissimos unde voluptate nulla tenetur quam dolore, nostrum molestiae? Praesentium cumque ex eius eligendi expedita quaerat sunt odit. Neque commodi tenetur atque voluptate ratione? Assumenda qui natus optio eligendi, voluptatem quam velit temporibus alias culpa nostrum reprehenderit quidem explicabo odit quibusdam ea amet vero. Autem quia fugit molestias blanditiis ab deserunt expedita in est voluptatum ex provident quibusdam magnam culpa iusto error eius sunt, libero reiciendis aut, earum magni! Distinctio beatae exercitationem quis ratione ab placeat eos consequuntur! Porro repudiandae, nostrum impedit vitae dolorum doloribus cum magnam facilis architecto adipisci debitis totam sequi est reprehenderit aut natus obcaecati in laboriosam! Nisi consectetur doloremque ratione maiores iusto, eligendi illo.
+  <main class="text_sec" id="text-area">
+    <h2 class="svart-text">Om mig</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus facilis alias error. Sed eligendi totam ea amet recusandae accusantium veniam velit aliquid magnam aliquam ut vero possimus corrupti, iste quia ipsam unde architecto accusamus quaerat maxime nisi harum ullam iure? Vitae tempora voluptates dolore commodi atque impedit eligendi ab modi fugit ipsa architecto ut, iusto, quasi quod deleniti fuga quo doloribus molestias nam quisquam eaque? Minus nostrum eos impedit mollitia reprehenderit asperiores sit ipsum vitae, iusto facere facilis eaque commodi maxime velit sapiente praesentium eius ex, molestias quisquam rerum deleniti hic unde quasi iste? Libero, ab. Quia dolorum corrupti exercitationem maxime eius quam tempora expedita sint aperiam quo, voluptas itaque nihil consectetur dolore voluptate ipsam illo asperiores omnis minus aut dolor eveniet.</p><p> Dicta dolor nihil ipsam atque similique hic voluptate iure necessitatibus doloribus voluptatibus nostrum aliquam autem minima, reprehenderit debitis unde omnis quia? Nisi, repudiandae? Tempora voluptates ratione quisquam quas laudantium tenetur fugit. At architecto veniam magni reiciendis dolorum cum facilis blanditiis temporibus, impedit, deserunt possimus incidunt laudantium voluptas asperiores! Molestiae atque itaque cupiditate tempora ut fugiat! Impedit maxime aut natus, tempora iure esse magni temporibus earum odio, quisquam fugit atque repellat reprehenderit assumenda dolor quidem similique voluptas vel necessitatibus!</p>
   </main>
-  <div class="fade-layer"></div>
+  <footer>
+    <a href="https://www.linkedin.com/in/lucas-norrflod-8b50b531a/">
+      <i class="fa fa-linkedin-square biggericon" id="linkedin"></i>
+    </a>
+    <a href="pdf/Cv-2025.pdf" download="lucas_norrflod_cv"><div class="link-hover" id="download_container">Hämta CV</div></a>
+  </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
