--- a/erfarenhet.html
+++ b/erfarenhet.html
@@ -19,6 +19,12 @@
     </div>
     <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="Bild på vattenfall">
   </header>
+  <nav class="desktop_menu hide-on-phone">
+    <a href="index.html"><div class="desktop_menu_links" id="current-link">Hem</div></a>
+    <a href="erfarenhet.html"><div class="desktop_menu_links link-hover">Erfarenheter</div></a>
+    <a href="projekt.html"><div class="desktop_menu_links link-hover">Projekt</div></a>
+    <a href="om_mig.html"><div class="desktop_menu_links link-hover">Om mig</div></a>
+  </nav>
     <nav class="menu" aria-label="primary">
       <div class="close-button">
         <i class="material-symbols-outlined">close</i>
