--- a/projekt.html
+++ b/projekt.html
@@ -32,6 +32,10 @@
     </nav>
     <div class="fade-layer"></div>
   <main class="main_container" id="pro-grid">
+    <div id="slideshow">
+      <img src="img/kenny-eliason-38XhGPwzI3U-unsplash.jpg" alt="projekt1-bild" class="pro-imgs self-center hide-on-phone" id="pro-img1">
+      <img src="img/lenin-estrada-OI1ToozsKBw-unsplash.jpg" alt="projekt2-bild" class="pro-imgs self-center hide-on-phone" id="pro-img2">  
+    </div>
     <section class="ul_div self-center" id="prog-sec">
       <h2 class="ul_h2">Programmeringsspråk</h2>
       <ul>
@@ -41,8 +45,6 @@
         <li>Ruby</li>
       </ul>
     </section>  
-    <img src="img/kenny-eliason-38XhGPwzI3U-unsplash.jpg" alt="projekt1-bild" class="pro-imgs self-center hide-on-phone" id="pro-img1">
-    <img src="img/lenin-estrada-OI1ToozsKBw-unsplash.jpg" alt="projekt2-bild" class="pro-imgs self-center hide-on-phone" id="pro-img2">
     <section class="text_sec" id="text-area">
       <h2 class="svart-text">Projekt</h2>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus facilis alias error. Sed eligendi totam ea amet recusandae accusantium veniam velit aliquid magnam aliquam ut vero possimus corrupti, iste quia ipsam unde architecto accusamus quaerat maxime nisi harum ullam iure? Vitae tempora voluptates dolore commodi atque impedit eligendi ab modi fugit ipsa architecto ut, iusto, quasi quod deleniti fuga quo doloribus molestias nam quisquam eaque? Minus nostrum eos impedit mollitia reprehenderit asperiores sit ipsum vitae, iusto facere facilis eaque commodi maxime velit sapiente praesentium eius ex, molestias quisquam rerum deleniti hic unde quasi iste? Libero, ab. Quia dolorum corrupti exercitationem maxime eius quam tempora expedita sint aperiam quo, voluptas itaque nihil consectetur dolore voluptate ipsam illo asperiores omnis minus aut dolor eveniet.</p><p> Dicta dolor nihil ipsam atque similique hic voluptate iure necessitatibus doloribus voluptatibus nostrum aliquam autem minima, reprehenderit debitis unde omnis quia? Nisi, repudiandae? Tempora voluptates ratione quisquam quas laudantium tenetur fugit. At architecto veniam magni reiciendis dolorum cum facilis blanditiis temporibus, impedit, deserunt possimus incidunt laudantium voluptas asperiores! Molestiae atque itaque cupiditate tempora ut fugiat! Impedit maxime aut natus, tempora iure esse magni temporibus earum odio, quisquam fugit atque repellat reprehenderit assumenda dolor quidem similique voluptas vel necessitatibus!</p>
